# ELRAG

./: .gitignore  Cargo.toml  README.md  requirements.txt
ELRAG/: README.md  docker-compose.yml
ELRAG/docs/: crud-scylla-beginner.md  scylla-auto-schema-sync.md
ELRAG/elrag/: main.py
ELRAG/elrag/api/: agent.py  docs.py  gcs.py
ELRAG/elrag/core/: auth_be.py  docs_be.py  gcs_be.py  vision_be.py
ELRAG/elrag/lib/: agents.py  storage_rest.py
ELRAG/elrag/models/: __init__.py  model.py
ELRAG/rpc-services/proto/: api.proto
ELRAG/rpc-services/src/: main.rs
ELRAG/tests/: test_agent.py
docs/: scylla-auto-schema-sync.md  scylla-db.md
elrag/: __init__.py  mapper.py
elrag/api/: unitest_api.py  vision.py
elrag/mcp/: __init__.py  server.py  tools.py
elrag/models/: base.py  schema.py
python/: main.py  mapper.py
python/api/: agent.py  docs.py  gcs.py  unitest_api.py  vision.py
python/api/auth/: auth.py
python/core/: auth_be.py  docs_be.py  gcs_be.py  vision_be.py
python/lib/: agents.py  documentai.py  gmaps.py  storage_rest.py  vision.py
python/mcp/: __init__.py  server.py  tools.py
python/models/: __init__.py  base.py  model.py  schema.py  user.py
python/sdk/: __init__.py  api_client.py  auth.py  client.py  config_loader.py  docs.py  elrag.py  exceptions.py  gcs.py  sdk.py  transport.py  unitest.py  vision.py
python/sdk/config/: .conf  .elrag_secret.json.example
rpc-services/: Cargo.toml  build.rs
src/: config.rs  engine.rs  error.rs  lib.rs  main.rs  messages.rs  model.rs  pybind.rs  users.rs
tests/: test_gmaps.py
(+8 files in other folders)
