[package]
name = "rust-me"
version = "0.1.0"
edition = "2024"

[dependencies]
pyo3 = { version = "0.29", features = ["auto-initialize"] }
scylla = "1.7.0"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
tonic = "0.14.6"
prost = "0.14.4"
tonic-prost = "0.14.6"
[build-dependencies]
tonic-prost-build = "0.14.6"
